@@ -251,3 +251,7 @@ version numbers.  Take a look at the various test cases to see what
 kinds of comparisons it can accurately make, and if you see any that
 aren't there, let me know.
 ----------------------------------------------------------------------
+Fri Jul 26 00:12:25 2002                        Michael Jennings (mej)
+
+Mmmm, sockets that connect. :)
+----------------------------------------------------------------------
